syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "group.proto";

message CreateGroupRequest {
	google.protobuf.StringValue domain_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue name = 2 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue description = 3;
}

message CreateGroupResponse {
	Group group = 1;
}
